# block2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md
assets/: block.icns
cmake/: zig-toolchain-aarch64.cmake  zig-toolchain-winarm64.cmake:Zone.Identifier
levels/: AKglance.block  ALfun.block  EZ4Beginners.block  JPimpossible.block  JoelP_V2.block  hahah.block  rando.block
src/cpp/: app.cpp  main.cpp  util.cpp  window.cpp
src/cpp/entities/: background.cpp  basic_platform.cpp  dragger.cpp  height_display.cpp  hud.cpp  squircle.cpp
src/cpp/entities/objects/: basic_platform.cpp  double_jump_item.cpp  ghost_platform.cpp  icy_platform.cpp  objects.cpp  spiky_platform.cpp  text_object.cpp
src/cpp/managers/: event_manager.cpp  input_manager.cpp  physics_manager.cpp  resource_manager.cpp  save_manager.cpp  view_manager.cpp
src/cpp/views/: death_view.cpp  editor_view.cpp  game_view.cpp  start_view.cpp
src/include/: app.hpp  constants.hpp  game_state.hpp  util.hpp  window.hpp
src/include/entities/: background.hpp  basic_platform.hpp  dragger.hpp  height_display.hpp  hud.hpp  squircle.hpp
src/include/entities/objects/: basic_platform.hpp  double_jump_item.hpp  ghost_platform.hpp  icy_platform.hpp  object.hpp  objects.hpp  spiky_platform.hpp  text_object.hpp
src/include/events/: change_view_event.hpp  close_window_event.hpp  event.hpp  start_test_event.hpp  toggle_debug_event.hpp
src/include/managers/: event_manager.hpp  input_manager.hpp  physics_manager.hpp  resource_manager.hpp  save_manager.hpp  view_manager.hpp
src/include/views/: death_view.hpp  editor_view.hpp  game_view.hpp  start_view.hpp  view.hpp
util/: create_app.sh  release-mac.sh  release.sh
